--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
-body{
-    margin: 0;
+body {
+  margin: 0;
 }
-header{
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    background-color: #DBE2EF;
+header {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  background-color: #dbe2ef;
 }
-h2{
-    margin-right: 25%;
+h2 {
+  margin-right: 25%;
 }
 /*
 @media (max-width: 480px) {
@@ -20,3 +20,35 @@ h2{
     }
 }
 */
+
+#landing {
+    background-image: url(images/landingIMG.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    width: 100%;
+    height: 50em;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+#text-box{
+    position: absolute;
+    bottom: 50%;
+    background-color: grey;
+    opacity: .5;
+    width: 40%;
+    height: 20%;
+}
+#welcome-text{
+    margin: 0;
+    color: whitesmoke;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    width: 40%;
+    height: 30%;
+    position: absolute;
+    top: 25%;
+}
