--- a/style.css
+++ b/style.css
@@ -23,10 +23,10 @@ h2 {
 
 #landing {
     background-image: url(images/landingIMG.jpg);
-    background-size: contain;
+    background-size: cover;
     background-repeat: no-repeat;
     width: 100%;
-    height: 50em;
+    height: 40em;
     display: flex;
     justify-content: center;
     align-items: center;
