--- a/style.css
+++ b/style.css
@@ -22,22 +22,9 @@ h2 {
     }
 }
 */
-/*
-#landing {
-    background-image: url(images/landingIMG.jpg);
-    background-size: contain;
-    background-repeat: no-repeat;
-    width: 80%;
-    height: 60em;
-    margin: 0 10%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-}
-*/
+
 #landing{
-    margin: 3% 10%;
+    margin: 3% 10% 5% 10%;
     padding: 2.5rem 5rem;
     height: 30rem;
     display: flex;
@@ -47,6 +34,7 @@ h2 {
     border-radius: 3rem;
 
 }
+
 #landing-text{
     align-self: center;
     font-size: x-large;
@@ -59,31 +47,46 @@ h2 {
 #landing-img{
     border-radius: 3rem;
 }
-/*
-#text-box{
-    position: absolute;
-    bottom: 50%;
-    background-color: grey;
-    opacity: .5;
-    width: 40%;
-    height: 20%;
-}
-#welcome-text{
-    margin: 0;
-    color: whitesmoke;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    width: 40%;
-    height: 30%;
-    position: absolute;
-    top: 25%;
-}
-*/
 
 #landing2{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
+
+#landing2-title{
+    font-size: xxx-large;
+    color: white;
+    text-align: center;
+}
+
+.landing2-item{
+    position: relative;
+    background-color: #3F72AF;
+    margin: 3% 10% 5% 10%;
+    padding: 2.5rem 5rem;
+    display: flex;
     height: auto;
-    width: 100%;
-    background-color: 3F72AF;
+    border-radius: 1rem;
+    border: solid 0.3rem #C4DDFF;
+    
+}
+.landing2-text{
+    margin: 0 3rem;
+    color: white;
+    text-align: center;
+}
+.landing2-img{
+    height: 15rem;
+    border-radius: 1rem;
+    border: solid .3rem #C4DDFF;
+}
+
+footer{
+    margin: 0 40%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    color: white;
+    
 }
