--- a/style.css
+++ b/style.css
@@ -395,7 +395,7 @@ footer {
         font-size: 1.4rem;
     }
     #contact-form{
-        margin: 0 20%;
+        margin: 5% 20%;
     }
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {}
