--- a/style.css
+++ b/style.css
@@ -135,7 +135,22 @@ footer {
     }
 }
 
-@media only screen and (min-width: 992px) {
+@media only screen and (min-width: 750px) {
+    #landing2-item1 img,
+    #landing2-item2 img{
+        width: 60%;
+        align-self: center;
+    }
+    .landing2-text{
+        text-align: justify;
+    
+    }
+    .landing2-title{
+        text-align: center;
+    }
+}
+
+@media only screen and (min-width: 900px) {
   #landing {
     display: flex;
     justify-content: center;
@@ -154,6 +169,9 @@ footer {
     margin: 0;
   }
 
+  .landing2-img{
+      height: 20rem;
+  }
   #landing2-item3 {
     display: flex;
     flex-direction: column;
@@ -381,13 +399,14 @@ footer {
     height: 2rem;
     margin-bottom: 15%;
 }
-
-/* Small devices (portrait tablets and large phones, 600px and up) */
-@media only screen and (min-width: 600px) {}
-
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {}
-
+#error{
+    color: pink;
+    text-align: center;
+}
+.invalid{
+    border: solid 2px red;
+    background-color: pink;
+}
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {}
     #contact-info,
