--- a/style.css
+++ b/style.css
@@ -401,7 +401,8 @@ footer {
 }
 #error{
     color: pink;
-    text-align: center;
+    align-self: center;
+    margin: 0;
 }
 .invalid{
     border: solid 2px red;
