--- a/style.css
+++ b/style.css
@@ -298,7 +298,7 @@ footer {
   }
 }
 
-@media only screen and (min-width: 1150px) {
+@media only screen and (min-width: 950px) {
     header h2{
         margin-right: 40%;
     }
@@ -533,3 +533,35 @@ footer {
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {}
 
+input[type="button"], 
+input[type="submit"],
+button {
+    border: 0;
+    outline: 0;
+    color: #333;
+    padding: 5px;
+    font-size: 14px;
+    cursor: pointer;
+    min-width: 120px;
+    margin: 15px 5px;
+    min-height: 20px;
+    font-weight: 700;
+    line-height: 30px;
+    text-align: center;
+    border-radius: 5px;
+    text-decoration: none;
+    background-color: #fff;
+    font-family: 'GFS Didot', serif;
+    border-bottom: 4px solid #d9d9d9;
+    box-shadow: 0px 5px 10px #333;
+    -webkit-transition: all 0.3s;
+    transition: all 0.3s;
+  }
+  
+input[type="button"]:active, 
+input[type="submit"]:active,
+button:active {
+    box-shadow: 0px 4px 8px #333;
+    -webkit-transform: scale(0.98);
+    transform: scale(0.98);
+  }
